[gd_scene load_steps=7 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/Options/OptionsCategory.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Options/OptionsScreen.gd" type="Script" id=3]
[ext_resource path="res://UI/Options/OptionUnknownType.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game/SmartScrollContainer.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.224196, 0.220456, 0.456055, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="OptionsScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 700.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 700.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 626.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="ScrollVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 626.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 45.0
bbcode_enabled = true
bbcode_text = "Options screen"
text = "Options screen"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 49.0
margin_right = 1280.0
margin_bottom = 53.0

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 57.0
margin_right = 1280.0
margin_bottom = 167.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="OptionsCategory" parent="VBoxContainer/ScrollContainer/ScrollVBox/OptionsContainer" instance=ExtResource( 2 )]

[node name="OptionUnknownType" parent="VBoxContainer/ScrollContainer/ScrollVBox/OptionsContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 1280.0
margin_bottom = 50.0

[node name="OptionUnknownType2" parent="VBoxContainer/ScrollContainer/ScrollVBox/OptionsContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 1280.0
margin_bottom = 80.0

[node name="OptionUnknownType3" parent="VBoxContainer/ScrollContainer/ScrollVBox/OptionsContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 90.0
margin_right = 1280.0
margin_bottom = 110.0

[node name="GridContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 630.0
margin_right = 1280.0
margin_bottom = 680.0
rect_min_size = Vector2( 0, 50 )

[node name="CloseButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 424.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Save and Close"

[node name="RevertButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Revert to Defaults"

[node name="ResetRenderButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 50.0
hint_tooltip = "Resets render settings, useful if someting breaks. Restart the game after pressing"
size_flags_horizontal = 3
text = "Reset Render Settings"

[connection signal="visibility_changed" from="." to="." method="_on_OptionsScreen_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/RevertButton" to="." method="_on_RevertButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ResetRenderButton" to="." method="_on_ResetRenderButton_pressed"]
